--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -7,7 +7,7 @@ env:
   TF_CLOUD_ORGANIZATION: "JR4_AWS_Testing"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "learn-terraform-github-actions"
-  CONFIG_DIRECTORY: "./"
+  CONFIG_DIRECTORY: "./automation"
 
 jobs:
   terraform:
