--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -8,7 +8,7 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "JR4_AWS_Testing"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "learn-terraform-github-actions"
+  TF_WORKSPACE: "CloudRC_Static_Website"
   CONFIG_DIRECTORY: "./"
 
 jobs:
@@ -43,3 +43,17 @@ jobs:
         with:
           run: ${{ steps.apply-run.outputs.run_id }}
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
+      - name: Sync files to S3 bucket
+        run: |
+          aws s3 sync build website/ s3://static.realewanderer.net --delete
