--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -54,6 +54,7 @@ jobs:
         with:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
+            aws-region: us-east-1
       - name: Sync files to S3 bucket
         run: |
           aws s3 sync build website/ s3://static.realewanderer.net --delete
