added action dependancy

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -45,6 +45,7 @@ jobs:
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
 
   deploy:
+    needs: terraform
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
