--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   terraform:
     name: "Terraform Apply"
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: read
     steps:
@@ -45,7 +45,7 @@ jobs:
 
   deploy:
     needs: terraform
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v4
