--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -4,13 +4,14 @@ on:
   push:
 #pull_request:
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   terraform:
-    name: "Terraform Plan"
+  #  name: "Terraform Plan"
     runs-on: self-hosted
-    permissions:
-      contents: read
-      pull-requests: write
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
