--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,4 +1,4 @@
-name: "Terraform Apply"
+name: "Website Deployment"
 
 on:
   push:
@@ -20,14 +20,27 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: "Terraform Init"
-        run: |
-          terraform init
+        run: terraform init
 
       - name: "Terraform Plan"
-        run: |
-          terraform plan -no-color
+        run: terraform plan -no-color
          continue-on-error: true
 
       - name: "Terraform Apply"
+        run:  terraform apply -auto-approve
+  deploy:
+    name: "Push to S3"
+    runs-on: self-hosted
+    needs: terraform
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+      - name: "Setup AWS CLI"
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: "Sync files to S3 bucket"
         run: |
-          terraform apply -auto-approve
+          aws s3 sync website/ s3://static.realewanderer.net --delete
