--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -47,6 +47,7 @@ jobs:
       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
       aws-region: us-east-1
+    outputs:
       domain_name: ${{ steps.apply.outputs.domain_name }}
     permissions:
       contents: read
