--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -44,9 +44,10 @@ jobs:
     runs-on: self-hosted
     needs: snyk_sca
     env:
-      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
-      aws-region: us-east-1
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
+      AWS_REGION: us-east-1
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
     outputs:
       domain_name: ${{ steps.apply.outputs.domain_name }}
     permissions:
