--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -63,6 +63,9 @@ jobs:
       - name: "Terraform Init"
         run: terraform init
 
+      - name: "Terraform Refresh"
+        run: terraform refresh
+
       - name: "Terraform Plan"
         run: terraform plan -no-color
         continue-on-error: true
