--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -6,26 +6,6 @@ on:
       - main
 
 jobs:
-#  sonarcloud_sast:
-#    name: "SonarCloud SAST Scan"
-#    runs-on: self-hosted
-#    steps:
-#    - uses: actions/checkout@v3
-#    - uses: actions/setup-node@v3
-#      with:
-#        node-version: 16
-#        cache: npm
-#    - run: npm install
-#    - name: SonarCloud Scan
-#      uses: sonarsource/sonarcloud-github-action@master
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#      with:
-#        args: >
-#          -Dsonar.organization=jrfour-cloudrc
-#          -Dsonar.projectKey=jrfour-cloudrc_challenge
-          
   # Runs Snyk for SCA (Software Composition Analysis) in IaC
   snyk_sca:
     name: "Snyk SCA Scan"
@@ -37,7 +17,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         continue-on-error: true
-          
+
   # Runs Terraform to build out AWS infrastructure and DNS rules
   terraform_build:
     name: "Terraform AWS Build"
@@ -73,7 +53,7 @@ jobs:
       - name: "Terraform Apply"
         id: apply
         run:  terraform apply -auto-approve
-        
+
   # Pushes files in 'website' folder to S3 bucket
   deploy:
     name: "Push to AWS S3"
@@ -99,6 +79,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     name: Run DAST scan on the web application
+    env:
+      domain_name: ${{ needs.terraform_build.outputs.domain_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -109,6 +91,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://static.realewanderer.net/'
+          target: 'https:// ${{ env.domain_name }}/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
