--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -7,10 +7,15 @@ jobs:
   terraform-plan:
     name: "Terraform Plan"
     runs-on: self-hosted
-
+    defaults:
+      run:
+        working-directory: dev
     permissions:
       contents: read
       pull-requests: write
+    env:
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID  }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID  }}
 
     steps:
       - name: "Checkout"
