--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -21,7 +21,6 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         continue-on-error: true
 
-  # Runs Terraform to build out AWS infrastructure and DNS rules
   terraform_build:
     name: "Terraform AWS Build"
     runs-on: self-hosted
@@ -29,10 +28,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      AWS_REGION: us-east-1
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-    outputs:
-      domain_name: ${{ steps.apply.outputs.domain_name }}
+      PM_API_TOKEN_ID: ${{ secrets.PM_API_TOKEN_ID }}
+      PM_API_TOKEN_SECRET: ${{ secrets.PM_API_TOKEN_SECRET }}
     permissions:
       contents: read
       pull-requests: write
@@ -50,50 +47,6 @@ jobs:
         run: terraform plan -no-color
         continue-on-error: true
 
-      - name: "Terraform Refresh"
-        run: terraform refresh
-
       - name: "Terraform Apply"
         id: apply
         run:  terraform apply -auto-approve
-
-  # Pushes files in 'website' folder to S3 bucket
-  deploy:
-    name: "Push to AWS S3"
-    runs-on: self-hosted
-    needs: [terraform_build]  #, sonarcloud_sast]
-    env:
-      domain_name: ${{ needs.terraform_build.outputs.domain_name }}
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-      - name: "Setup AWS CLI"
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_ID }}
-          aws-region: us-east-1
-      - name: "Sync files to S3 bucket"
-        run: |
-          aws s3 sync website/ s3://${{ env.domain_name }} --delete
-
-  # Runs OWASP ZAP Scan for web vulnerabilities
-  zap_scan:
-    runs-on: ubuntu-latest
-    needs: deploy
-    name: Run DAST scan on the web application
-    env:
-      domain_name: ${{ needs.terraform_build.outputs.domain_name }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https:// ${{ env.domain_name }}/'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
