--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -28,7 +28,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      PM_API_TOKEN_ID: ${{ secrets.PM_API_TOKEN_ID }}
+      PM_API_TOKEN_ID_B64: ${{ secrets.PM_API_TOKEN_ID_B64 }}
       PM_API_TOKEN_SECRET: ${{ secrets.PM_API_TOKEN_SECRET }}
     permissions:
       contents: read
@@ -37,6 +37,9 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
+      - name: "Config Terraform Creds"
+        run: |
+          export PM_API_TOEKN_ID=$(cat ${{ secrets.PM_API_TOKEN_B64 }} | base64 -d)
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v3
 
