--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -49,7 +49,7 @@ jobs:
         run: terraform init
 
       - name: "Terraform Plan"
-        run: terraform plan -no-color
+        run: terraform plan -no-color -var="PM_APT_TOKEN_ID=$TF_VAR_PM_API_TOKEN_ID"
         continue-on-error: true
 
       - name: "Terraform Apply"
