--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -28,8 +28,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      TFVARS_B64: ${{ secrets.TFVARS_B64 }}
       PM_API_TOKEN_SECRET: ${{ secrets.PM_API_TOKEN_SECRET }}
+      TFVARS_B64: ${{ var.TFVARS_B64 }}
 
     permissions:
       contents: read
@@ -40,7 +40,7 @@ jobs:
 
       - shell: bash
         run: |
-          cat ${{ secrets.TVARS_B64 }} | base64 -d > terraform.tfvars
+          cat ${{ var.TVARS_B64 }} | base64 -d > terraform.tfvars
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v3
