--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -29,7 +29,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
       PM_API_TOKEN_SECRET: ${{ secrets.PM_API_TOKEN_SECRET }}
-      TFVARS_B64: ${{ var.TFVARS_B64 }}
+      TFVARS_B64: ${{ vars.TFVARS_B64 }}
 
     permissions:
       contents: read
@@ -40,7 +40,7 @@ jobs:
 
       - shell: bash
         run: |
-          cat ${{ var.TVARS_B64 }} | base64 -d > terraform.tfvars
+          cat ${{ vars.TVARS_B64 }} | base64 -d > terraform.tfvars
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v3
