--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -22,7 +22,7 @@ jobs:
         continue-on-error: true
 
   terraform_build:
-    name: "Terraform AWS Build"
+    name: "Terraform Proxmox Build"
     runs-on: self-hosted
     needs: snyk_sca
     env:
