--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: dev
+        working-directory: prod
     permissions:
       contents: read
       pull-requests: write
