--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -72,7 +72,7 @@ jobs:
           aws-region: us-east-1
       - name: "Sync files to S3 bucket"
         run: |
-          aws s3 sync /website/ s3://${{ env.domain_name }} --delete
+          aws s3 sync ../website/ s3://${{ env.domain_name }} --delete
 
   # Runs OWASP ZAP Scan for web vulnerabilities
   zap_scan:
