--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -31,8 +31,6 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
       AWS_REGION: us-east-1
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-    outputs:
-      domain_name: ${{ steps.apply.outputs.domain_name }}
     permissions:
       contents: read
       pull-requests: write
@@ -47,12 +45,11 @@ jobs:
         run: terraform init
 
       - name: "Terraform Plan"
-        run: terraform plan -no-color
+        run: terraform plan -var "site_name:${{ vars.SITE_NAME }}" -no-color
         continue-on-error: true
 
       - name: "Terraform Apply"
-        id: apply
-        run:  terraform apply -auto-approve
+        run:  terraform apply -var "site_name:${{ vars.SITE_NAME }}" -auto-approve
 
   # Pushes files in 'website' folder to S3 bucket
   deploy:
@@ -72,15 +69,13 @@ jobs:
           aws-region: us-east-1
       - name: "Sync files to S3 bucket"
         run: |
-          aws s3 sync ../website/ s3://${{ env.domain_name }} --delete
+          aws s3 sync ../website/ s3://${{ vars.SITE_NAME }} --delete
 
   # Runs OWASP ZAP Scan for web vulnerabilities
   zap_scan:
     runs-on: ubuntu-latest
     needs: deploy
     name: Run DAST scan on the web application
-    env:
-      domain_name: ${{ needs.terraform_build.outputs.domain_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -91,6 +86,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https:// ${{ env.domain_name }}/'
+          target: 'https://${{ vars.SITE_NAME }}/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
