--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -31,7 +31,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
       AWS_REGION: us-east-1
       CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      DOMAIN: ${{ vars.SITE_NAME }}
+      DOMAIN: ${{ vars.TF_SITE_DOMAIN }}
     permissions:
       contents: read
       pull-requests: write
@@ -58,7 +58,7 @@ jobs:
     runs-on: self-hosted
     needs: [terraform_build]  #, sonarcloud_sast]
     env:
-      DOMAIN: ${{ vars.SITE_NAME }}
+      DOMAIN: ${{ vars.TF_SITE_DOMAIN }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
@@ -77,6 +77,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     name: Run DAST scan on the web application
+    env:
+      DOMAIN: ${{ vars.TF_SITE_DOMAIN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -87,6 +89,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://${{ vars.SITE_NAME }}/'
+          target: 'https://$DOMAIN/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
