--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -77,8 +77,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     name: Run DAST scan on the web application
-    env:
-      DOMAIN: ${{ vars.TF_SITE_DOMAIN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -87,6 +85,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://$DOMAIN/'
+          target: 'https://${{ vars.TF_SITE_DOMAIN }}/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
