--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -86,5 +86,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'https://${{ vars.TF_SITE_DOMAIN }}/'
-          rules_file_name: '.zap/rules.tsv'
+          rules_file_name: '.zap/rules.zap'
           cmd_options: '-a'
