--- a/.github/workflows/website-build.yml
+++ b/.github/workflows/website-build.yml
@@ -23,6 +23,8 @@ jobs:
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --report
         continue-on-error: true
 
   # Runs Terraform to build out AWS infrastructure and DNS rules
